--- a/music.css
+++ b/music.css
@@ -17,3 +17,49 @@ html{
     text-shadow: 0 0.8rem 2rem rgb(158, 154, 154);
     color: whitesmoke;
 }
+.container .music-container{
+    display: flex;
+    align-items: center;
+    flex-flow: column;
+}
+.container .music-container .box{
+    height: 16rem;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    background: #f9f9f9;
+    border-radius: 1rem;
+    box-shadow: 1 .5rem 1rem #000;
+    overflow: hidden;
+    margin:2rem
+}
+.container .music-container .box .image{
+    height: 100%;
+    width: 25%;
+}
+.container .music-container .box .image img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover ;
+}
+.container .music-container .box .music{
+    width: 75%;
+}
+.container .music-container .box .music audio{
+    width: 100%;
+    outline: none;
+}
+.container .music-container .box .music audio::-webkit-media-controls-enclosure{
+background: none;
+}
+ @media(max-width:600px){
+     .container .music-container .box{
+         height: 27rem;
+         width: 90%;
+         flex-flow: column;
+     }
+    .container .music-container .box .image{
+        height: 20%;
+        width: 100%;
+    }
+ }
